k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ${DOCKER_USER}/fe-${IMAGE_NAME}:${VERSION}
        ports:
        - containerPort: 80
      # ถ้ามี Worker Node ให้เอา tolerations ออก
      tolerations: #ทำให้อนุญาติการทำงานสร้าง pod ในเครื่อง master node ได้
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
